--- a/mp_01/pages/swiper/swiper.wxml
+++ b/mp_01/pages/swiper/swiper.wxml
@@ -1,5 +1,6 @@
 <!-- 轮播图 -->
-<swiper class="swiper-container">
+<swiper class="swiper-container" indicator-dots
+indicator-active-color="#fff" autoplay="true" interval="3000" circular>
   <swiper-item>
     <view class="item">A</view>
   </swiper-item>
