--- a/mp_01/pages/text/text.wxml
+++ b/mp_01/pages/text/text.wxml
@@ -4,3 +4,5 @@
   Long press the phone number to copy:
   <text selectable>15767119993</text>
 </view>
+
+<rich-text nodes="<h1 style='color:lightblue;'>标题</h1>"/>
